Fix overflow in code block
Fixed #26

--- a/_sass/_typography.scss
+++ b/_sass/_typography.scss
@@ -279,9 +279,7 @@ pre {
   font-size: .8rem;
   line-height: 1.4;
   white-space: pre;
-  white-space: pre-wrap;
-  word-break: break-all;
-  // word-wrap: break-word;
+  overflow: auto;
   background-color: $code-background-color;
 }
 
